eks_cluster/child_modules/rt.tf
resource "aws_route_table" "rt" {
    vpc_id = aws_vpc.eks_vpc.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id
    }

    tags = {
        Name = "eks_rt"
    }
  
}
